@@ -16,6 +16,10 @@ before_install:
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
 
+install:
+  - ./travis-tool.sh install_aptget r-cran-httr r-cran-jsonlite
+  - ./travis-tool.sh install_r whoami
+  
 script:
   - ./travis-tool.sh run_tests
 
